# blitz-io

./: .gitignore  BENCHMARKS.md  CLAUDE.md  CONTRIBUTING.md  FULL_REVIEW_PROMPT.md  IMPLEMENTATION_PLAN.md  README.md  REVIEW_PROMPT.md  TASK_REVIEW_PROMPT.md  TESTING_PLAN.md  TOKIO_COMPARISON.md  blitz-io-reference.md  build.zig  build.zig.zon
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  nightly.yml  release.yml
bench/: SYNC_PRIMITIVES_REVIEW.md  async_bench.zig  bench.zig  blitz_bench.zig  compare.zig  internal_bench.zig  mpmc_test.zig  true_async_test.zig
bench/rust_bench/: Cargo.toml
bench/rust_bench/src/: main.rs
docs/: ASYNC_ARCHITECTURE.md  architecture.md  astro.config.mjs  channels.md  getting-started.md  package.json  scheduler.md  sidebar.mjs  stackless-vs-stackful.md  sync-primitives.md  versions.json
docs/scripts/: release.sh  snapshot.mjs  update-versions.mjs
examples/: combinators_demo.zig  echo_server.zig  graceful_shutdown.zig  timeout_demo.zig  udp_echo.zig
src/: async.zig  backend.zig  blocking.zig  channel.zig  executor.zig  fs.zig  future.zig  internal.zig  io.zig  io_driver.zig  lib.zig  net.zig  process.zig  runtime.zig  shutdown.zig  signal.zig  sync.zig  task.zig  test_exports.zig  time.zig
src/async/: combinators.zig
src/backend/: completion.zig  epoll.zig  io_uring.zig  iocp.zig  kqueue.zig  poll.zig  scheduled_io.zig
src/channel/: Broadcast.zig  Channel.zig  Oneshot.zig  Watch.zig  select.zig
tests/: common.zig  test_config.zig
(+222 files in other folders)
