[package]
name = "blitz-io-rust-bench"
version = "0.1.0"
edition = "2021"
description = "Tokio benchmarks for comparison with blitz-io"

[dependencies]
tokio = { version = "1.36", features = ["rt-multi-thread", "sync", "macros"] }
async-channel = "2.1"

[[bin]]
name = "blitz_rust_bench"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
